Fix hero section, competence tags and brand in nav on small screens.

--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&display=swap');
 
 html {
@@ -91,6 +90,11 @@ a:hover {
     text-decoration: none;
 }
 
+.hero-text {
+    z-index: 100;
+    margin-top: 14rem;
+}
+
 .tag {
     background-color: #99adab66;
     padding: 0.8rem;
@@ -101,6 +105,7 @@ a:hover {
 
 #title-one {
     position: absolute;
+    width: 15rem;
     visibility: visible;
     animation-name: rotate;
     animation-duration: 2s;
@@ -108,6 +113,7 @@ a:hover {
 
 #title-two {
     position: absolute;
+    width: 15rem;
     visibility: visible;
     animation-name: rotate;
     animation-duration: 2s;
@@ -116,20 +122,17 @@ a:hover {
 
 #title-three {
     position: absolute;
+    width: 15rem;
     visibility: visible;
     animation-name: rotate;
     animation-duration: 2s;
 }
 
-.hero-text {
-    z-index: 100;
-    margin-top: 14rem;
-}
 
 .title-wrapper {
     border-top: 0.1rem solid #bbb;
     border-bottom: 0.1rem solid #bbb;
-    width: 12rem;
+    width: 8rem;
     height: 4rem;
     margin-top: 2rem;
 }
@@ -334,6 +337,10 @@ p.filter-title {
 
     .bottom-row {
         text-align: center;
+    }
+
+    .navbar-brand {
+        font-size: 1rem;
     }
 }
 
